# podcasts-model-serving

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
podcasts_model_serving/: app.py
