[tool.poetry]
name = "podcasts-model-serving"
version = "0.1.0"
description = "Model serving package for the podcasts app"
authors = ["David Galevski <davidgalevski@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9, <3.12"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.2.0"
ruff = "^0.0.262"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
